--- a/micro-videos/Dockerfile
+++ b/micro-videos/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10.2-slim
 
+RUN apt update && apt install -y --no-install-recommends default-jre
+
 RUN useradd -ms /bin/bash python
 
 USER python
@@ -7,5 +9,6 @@ USER python
 WORKDIR /home/python/app
 
 ENV PYTHONPATH=${PYTHONPATH}/home/python/app/src
+ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
 
 CMD [ "tail", "-f", "/dev/null"]
