--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,5 +33,13 @@
 	// "postCreateCommand": "apt-get update && apt-get install -y curl",
 
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "python"
+	"remoteUser": "python",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.python",
+				"sourcery.sourcery"
+			]
+		}
+	}
 }
