--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,9 @@
 [tool.pdm]
+[tool.pdm.dev-dependencies]
+dev = [
+    "autopep8>=2.0.2",
+    "pylint>=2.17.2",
+]
 
 [project]
 name = ""
@@ -8,7 +13,6 @@ authors = [
     {name = "Victor Kokado", email = "victornerikokado@yahoo.com"},
 ]
 dependencies = [
-    "autopep8>=2.0.2",
 ]
 requires-python = ">=3.10.2"
 license = {text = "MIT"}
