--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,14 @@
     ],
     "python.analysis.extraPaths": [
         "${workspaceFolder}/__pypackages__/3.10/lib"
-    ]
+    ],
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./src",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
