--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,14 @@
     "python.analysis.extraPaths": [
         "${workspaceFolder}/__pypackages__/3.10/lib"
     ],
-    "python.testing.unittestArgs": [
+    "python.testing.pytestArgs": [
+        "src",
+        "--ignore",
+        "__pypackages__"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+/*     "python.testing.unittestArgs": [
         "-v",
         "-s",
         "./src",
@@ -18,5 +25,5 @@
         "test_*.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true */
 }
